--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,22 @@ node_modules/
 # Build outputs (for GitHub CI)
 dist/
 build/
+
+# Cloudflare Worker development
+.wrangler/
+wrangler.toml.local
+
+# Python cache (for GitHub Actions scripts)
+__pycache__/
+*.pyc
+*.pyo
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
