Fix: Add actual KV namespace ID to wrangler configuration
- Replace placeholder YOUR_KV_NAMESPACE_ID with actual ID
- KV namespace ID: 8132e4922eb74c0780ae670461cbaf3c

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,8 +8,8 @@ compatibility_date = "2024-01-01"
 # KV Namespace binding
 [[kv_namespaces]]
 binding = "LEADERBOARD_QUEUE"
-# Replace with your actual KV namespace ID
-id = "YOUR_KV_NAMESPACE_ID"
+# KV namespace ID for typeattack
+id = "8132e4922eb74c0780ae670461cbaf3c"
 
 # Environment variables (optional)
 [vars]
